# next-hackathon

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TRUSTPITCH_MASTER.md  backlog.md  package.json  pnpm-lock.yaml  railway.json
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  railway.toml  requirements.txt
backend/app/: config.py  deps.py  main.py
backend/app/agents/: graph.py
backend/app/core/: openai_client.py  supabase.py
backend/app/models/: schemas.py
backend/app/routers/: audio.py  coach.py  live_reaction.py  qna.py  realtime.py  sessions.py  visual.py
backend/app/services/: audio_features.py  content_analyzer.py  elevenlabs_voice.py  filler_detector.py  heckle.py  image_gen.py  pdf_extract.py  qna.py  scoring.py  transcription.py  web_research.py
backend/tests/: test_filler.py  test_scoring.py
docs/: API_SPEC.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HANDOFF.md  JUDGE_PSYCHOLOGY.md
docs/scratch/: README.md
docs/specs/: README.md
docs/test-fixtures/: 01-strong-saas.md  02-weak-fintech.md  03-medical-ai.md  04-edtech-aggressive.md  README.md
frontend/: .env.local.example  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/__tests__/: score.test.ts  trigger-engine.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-audio-level.ts  use-audio-recorder.ts  use-mediapipe.ts  use-realtime-transcription.ts  use-speech-recognition.ts  use-trust-store.ts
frontend/lib/: api-client.ts  demo-simulator.ts  score.ts  utils.ts
supabase/: seed.sql
(+58 files in other folders)
