[project]
name = "trustpitch-backend"
version = "0.1.0"
description = "TrustPitch FastAPI backend - audio analysis + LLM orchestration"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.18",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.28",
  "openai>=1.55",
  "anthropic>=0.40",
  "supabase>=2.10",
  "librosa>=0.10",
  "numpy>=1.26,<2.3",
  "soundfile>=0.12",
  "audioread>=3.0",
  "python-dotenv>=1.0",
  "langgraph>=0.2.50",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "PyJWT>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false
